# mentor

./: .env.example  .gitignore  CLAUDE.md  CURRENT_STATE.md  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/versions/: 20260410_0001_add_learning_sessions.py
backend/app/: config.py  main.py  telemetry.py
backend/app/api/routes/: auth.py  cards.py  chat.py  curriculum.py  gates.py  progress.py  quiz.py
backend/app/engine/: adaptive.py  mentor.py  progress_tracker.py  session_store.py  spaced_repetition.py
backend/app/engine/prompts/: system_prompts.py
backend/app/integrations/: slack_bot.py
backend/app/models/: __init__.py  conversation.py  curriculum.py  progress.py  session.py  user.py
backend/app/scheduler/: daily_agenda.py  spaced_rep_scheduler.py
backend/app/seed/: parse_curriculum.py
frontend/: package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/artifact/: page.tsx
frontend/src/app/cards/: page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/gate-review/: page.tsx
frontend/src/app/progress/: page.tsx
frontend/src/lib/: api.ts
temp/: curriculum.md
